# web/cards.go
@@ -11,27 +11,36 @@ import (
 
 func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	var input struct {
-		Name     string
+		Name   string
+		Number string
+		Set    string
+		Rarity string
+
+		Sort string
+
 		Page     int
-		PageSize int
-		Sort     string
+		Size int
 	}
 
 	v := NewValidator()
 	qs := r.URL.Query()
 
 	input.Name = readString(qs, "name", "")
-	input.Page = readInt(qs, "page", 1, v)
-	input.PageSize = readInt(qs, "page_size", 20, v)
+	input.Number = readString(qs, "number", "")
+	input.Set = readString(qs, "set", "")
+	input.Rarity = readString(qs, "rarity", "")
+
 	input.Sort = readString(qs, "sort", "number")
 
-	v.Check(input.Page > 0, "page", "must be greater than zero")
-	v.Check(input.Page <= 1_000_000, "page", "must be a maximum of 1 million")
-	v.Check(input.PageSize > 0, "page_size", "must be greater than zero")
-	v.Check(input.PageSize <= 100, "page_size", "must be a maximum of 100")
+	input.Page = readInt(qs, "page", 1, v)
+	input.Size = readInt(qs, "size", 20, v)
 
 	validSorts := []string{"name", "-name", "number", "-number"}
 	v.Check(v.In(input.Sort, validSorts...), "sort", "invalid sort value")
+
+	v.Check(input.Page > 0, "page", "must be greater than zero")
+	v.Check(input.Size > 0, "size", "must be greater than zero")
+	v.Check(input.Size <= 100, "size", "must be a maximum of 100")
 
 	if !v.Valid() {
 		failedValidationResponse(w, r, v.Errors)
@@ -43,8 +52,25 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	// apply filtering
 	for _, card := range app.cards {
 		if input.Name != "" {
-			name := strings.ToLower(card.Name)
-			if !strings.Contains(name, strings.ToLower(input.Name)) {
+			if !strings.Contains(strings.ToLower(card.Name), strings.ToLower(input.Name)) {
+				continue
+			}
+		}
+
+		if input.Number != "" {
+			if strings.ToLower(card.Number) != strings.ToLower(input.Number) {
+				continue
+			}
+		}
+
+		if input.Set != "" {
+			if strings.ToLower(card.Set) != strings.ToLower(input.Set) {
+				continue
+			}
+		}
+
+		if input.Rarity != "" {
+			if strings.ToLower(card.Rarity) != strings.ToLower(input.Rarity) {
 				continue
 			}
 		}
@@ -73,13 +99,13 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// apply pagination
-	start := (input.Page - 1) * input.PageSize
+	start := (input.Page - 1) * input.Size
 	if start >= len(cards) {
 		cards = []model.Card{}
 		start = 0
 	}
 
-	end := start + input.PageSize
+	end := start + input.Size
 	if end > len(cards) {
 		end = len(cards)
 	}
